# recipe-parser

./: .flake8  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: check_code.yml
recipe_parser/: __init__.py  const.py  db.py  parsing.py  parsing_utils.py  proxy.py  validators.py
recipe_parser/parsing/: page.py  parse.py  recipe.py  utils.py
