[tool.poetry]
name = "recipe-parser"
version = "0.1.0"
description = "Parser for eda.ru."
authors = ["Timur Kasimov <tkasimov@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.28.1"
PySocks = "^1.7.1"
stem = "^1.8.1"
loguru = "^0.6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"
flake8-colors = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 2

[tool.mypy]
python_version = 3.9

exclude = "tests/*"

disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
allow_untyped_globals = true
allow_redefinition = true

follow_imports = "skip"

overrides = [
    { ignore_missing_imports=true, module="bs4" },
    { ignore_missing_imports=true, module="requests" },
    { ignore_missing_imports=true, module="socks" },
    { ignore_missing_imports=true, module="stem" },
    { ignore_missing_imports=true, module="stem.control" },
]
